[package]
name = "kho-lanto"
version = "0.1.0"
authors = ["cbonaudo <cbonaudo@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.12"
job_scheduler = "*"
once_cell = "*"
config = "*"
surf = "*"
serde_json = "1.0.64"
async-std = "*"
anyhow = "1.0.40"
serde = "1.0.125"
tokio = {features = ["full"], version = "1.5"}

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
]
version = "0.8"
